--- a/res/xml/ion_settings_notifications.xml
+++ b/res/xml/ion_settings_notifications.xml
@@ -48,5 +48,12 @@
             android:title="@string/incall_vibrate_disconnect_title"
             android:defaultValue="false" />
     </PreferenceCategory>
-			
+
+    <com.ion.ionizer.preferences.GlobalSettingSwitchPreference
+        android:key="wake_when_plugged_or_unplugged"
+        android:title="@string/wakeup_when_plugged_unplugged_title"
+        android:summary="@string/wakeup_when_plugged_unplugged_summary"
+        android:defaultValue="true"
+        settings:allowDividerAbove="true"/>
+
 </PreferenceScreen>
