--- a/res/xml/ion_settings_animations.xml
+++ b/res/xml/ion_settings_animations.xml
@@ -20,7 +20,8 @@
     xmlns:ionionizer="http://schemas.android.com/apk/res-auto">
 
     <PreferenceCategory
-        android:title="@string/system_animation_title">
+        android:title="@string/system_animation_title"
+        settings:initialExpandedChildrenCount="5" >
 
         <com.ion.ionizer.preferences.SystemSettingSwitchPreference
             android:key="disable_transition_animations"
