--- a/res/xml/ion_settings_interface.xml
+++ b/res/xml/ion_settings_interface.xml
@@ -39,9 +39,11 @@
             android:entries="@array/qs_selector_entries"
             android:entryValues="@array/qs_selector_values" />
 
-    </PreferenceCategory >
+    </PreferenceCategory>
 
-    <PreferenceCategory>
+    <PreferenceCategory
+        android:key="dpi_category"
+        android:title="@string/dpi_category_title">
 
 	    <Preference
             android:key="font_size"
@@ -62,23 +64,23 @@
 
     </PreferenceCategory>
 
-     <PreferenceCategory 
-                android:key="dashboard_category" 
-                android:title="@string/dashboard_category"> 
+    <PreferenceCategory 
+        android:key="dashboard_category" 
+        android:title="@string/dashboard_category"> 
  
         <com.ion.ionizer.preferences.SystemSettingSwitchPreference 
-                android:key="enable_conditions" 
-                android:title="@string/dashboard_conditions_title" 
-                android:summaryOn="@string/summary_dashboard_conditions_enabled" 
-                android:summaryOff="@string/summary_dashboard_conditions_disabled" 
-                android:defaultValue="true" /> 
-        
-         <com.ion.ionizer.preferences.SystemSettingSwitchPreference 
-                android:key="enable_suggestions" 
-                android:title="@string/dashboard_suggestions_title" 
-                android:summaryOn="@string/summary_dashboard_suggestions_enabled" 
-                android:summaryOff="@string/summary_dashboard_suggestions_disabled" 
-                android:defaultValue="true" /> 
+            android:key="enable_conditions" 
+            android:title="@string/dashboard_conditions_title" 
+            android:summaryOn="@string/summary_dashboard_conditions_enabled" 
+            android:summaryOff="@string/summary_dashboard_conditions_disabled" 
+            android:defaultValue="true" /> 
+
+        <com.ion.ionizer.preferences.SystemSettingSwitchPreference 
+            android:key="enable_suggestions" 
+            android:title="@string/dashboard_suggestions_title" 
+            android:summaryOn="@string/summary_dashboard_suggestions_enabled" 
+            android:summaryOff="@string/summary_dashboard_suggestions_disabled" 
+            android:defaultValue="true" /> 
  
       </PreferenceCategory> 
 		
