--- a/res/xml/ion_settings_quicksettings.xml
+++ b/res/xml/ion_settings_quicksettings.xml
@@ -16,93 +16,96 @@
 <PreferenceScreen
     xmlns:android="http://schemas.android.com/apk/res/android"
     android:title="@string/quicksettings_title"
-    xmlns:settings="http://schemas.android.com/apk/res/com.android.settings">
+    xmlns:settings="http://schemas.android.com/apk/res/com.android.settings"
+    settings:initialExpandedChildrenCount="8" >
 
-        <com.ion.ionizer.preferences.SecureSettingSwitchPreference
-            android:key="qs_brightness_position_bottom"
-            android:title="@string/qs_brightness_position_bottom_title"
-            android:summary="@string/qs_brightness_position_bottom_summary"
-            android:defaultValue="false"
-            android:dependency="qs_show_brightness_slider" />
-			
-        <com.ion.ionizer.preferences.SecureSettingSwitchPreference
-            android:key="qs_show_brightness_slider"
-            android:title="@string/brightness_slider_title"
-            android:summary="@string/brightness_slider_summary"
-            android:defaultValue="true"/>
+    <com.ion.ionizer.preferences.SystemSettingSeekBarPreference
+        android:key="qs_rows_portrait"
+        android:title="@string/qs_rows_portrait_title"
+        android:max="6"
+        android:min="1"
+        settings:units=""
+        android:defaultValue="3"
+        android:persistent="false" />
 
-        <com.ion.ionizer.preferences.SystemSettingSwitchPreference 
-            android:key="qs_tile_title_visibility" 
-            android:title="@string/qs_tile_title_visibility_title" 
-            android:summary="@string/qs_tile_title_visibility_summary" 
-            android:defaultValue="true" /> 
+    <com.ion.ionizer.preferences.SystemSettingSeekBarPreference
+        android:key="qs_rows_landscape"
+        android:title="@string/qs_rows_landscape_title"
+        android:max="4"
+        android:min="1"
+        settings:units=""
+        android:defaultValue="2"
+        android:persistent="false" />
 
-        <com.ion.ionizer.preferences.SecureSettingSwitchPreference
-            android:key="quick_settings_vibrate"
-            android:title="@string/quick_settings_vibrate_title"
-            android:summary="@string/quick_settings_vibrate_summary"
-            android:defaultValue="false"/>
+    <com.ion.ionizer.preferences.SystemSettingSeekBarPreference
+        android:key="qs_columns_portrait"
+        android:title="@string/qs_columns_portrait_title"
+        android:max="8"
+        android:min="3"
+        settings:units=""
+        android:defaultValue="3"
+        android:persistent="false" />
 
-        <com.ion.ionizer.preferences.SecureSettingSwitchPreference
-            android:key="qs_show_secure"
-            android:title="@string/qs_footer_warnings_title"
-            android:summary="@string/qs_footer_warnings_summary"
-            android:defaultValue="true" />
+    <com.ion.ionizer.preferences.SystemSettingSeekBarPreference
+        android:key="qs_columns_landscape"
+        android:title="@string/qs_columns_landscape_title"
+        android:max="8"
+        android:min="3"
+        settings:units=""
+        android:defaultValue="4"
+        android:persistent="false" />
 
-        <com.ion.ionizer.preferences.SystemSettingSeekBarPreference
-            android:key="qs_rows_portrait"
-            android:title="@string/qs_rows_portrait_title"
-            android:max="6"
-            android:min="1"
-            settings:units=""
-            android:defaultValue="3"
-            android:persistent="false" />
+    <com.ion.ionizer.preferences.SystemSettingSeekBarPreference
+        android:key="qs_columns_quickbar"
+        android:title="@string/sysui_qqs_count_title"
+        android:max="8"
+        android:min="6"
+        android:defaultValue="6"
+        android:persistent="false" />
 
-        <com.ion.ionizer.preferences.SystemSettingSeekBarPreference
-            android:key="qs_rows_landscape"
-            android:title="@string/qs_rows_landscape_title"
-            android:max="4"
-            android:min="1"
-            settings:units=""
-            android:defaultValue="2"
-            android:persistent="false" />
+    <com.ion.ionizer.preferences.SecureSettingSwitchPreference
+        android:key="quick_settings_vibrate"
+        android:title="@string/quick_settings_vibrate_title"
+        android:summary="@string/quick_settings_vibrate_summary"
+        android:defaultValue="false"/>
 
-        <com.ion.ionizer.preferences.SystemSettingSeekBarPreference
-            android:key="qs_columns_portrait"
-            android:title="@string/qs_columns_portrait_title"
-            android:max="8"
-            android:min="3"
-            settings:units=""
-            android:defaultValue="3"
-            android:persistent="false" />
+    <com.ion.ionizer.preferences.SecureSettingSwitchPreference
+        android:key="qs_show_brightness_slider"
+        android:title="@string/brightness_slider_title"
+        android:summary="@string/brightness_slider_summary"
+        android:defaultValue="true"
+        settings:allowDividerAbove="true"/>
 
-        <com.ion.ionizer.preferences.SystemSettingSeekBarPreference
-            android:key="qs_columns_landscape"
-            android:title="@string/qs_columns_landscape_title"
-            android:max="8"
-            android:min="3"
-            settings:units=""
-            android:defaultValue="4"
-            android:persistent="false" />
-			
-        <com.ion.ionizer.preferences.SystemSettingSeekBarPreference
-            android:key="qs_columns_quickbar"
-            android:title="@string/sysui_qqs_count_title"
-            android:max="8"
-            android:min="6"
-            android:defaultValue="6"
-            android:persistent="false" />
+    <com.ion.ionizer.preferences.SecureSettingSwitchPreference
+        android:key="qs_brightness_position_bottom"
+        android:title="@string/qs_brightness_position_bottom_title"
+        android:summary="@string/qs_brightness_position_bottom_summary"
+        android:defaultValue="false"
+        android:dependency="qs_show_brightness_slider" />
 
-        <com.ion.ionizer.preferences.SystemSettingSwitchPreference
-            android:key="qs_footer_show_settings"
-            android:title="@string/qs_footer_settings_title"
-            android:summary="@string/qs_footer_settings_summary"
-            android:defaultValue="true" />
+    <com.ion.ionizer.preferences.SystemSettingSwitchPreference 
+        android:key="qs_tile_title_visibility" 
+        android:title="@string/qs_tile_title_visibility_title" 
+        android:summary="@string/qs_tile_title_visibility_summary" 
+        android:defaultValue="true" /> 
 
-        <com.ion.ionizer.preferences.SystemSettingSwitchPreference
-            android:key="qs_footer_show_services"
-            android:title="@string/qs_footer_services_title"
-            android:summary="@string/qs_footer_services_summary"
-            android:defaultValue="false" />
+    <com.ion.ionizer.preferences.SecureSettingSwitchPreference
+        android:key="qs_show_secure"
+        android:title="@string/qs_footer_warnings_title"
+        android:summary="@string/qs_footer_warnings_summary"
+        android:defaultValue="true" />
+
+    <com.ion.ionizer.preferences.SystemSettingSwitchPreference
+        android:key="qs_footer_show_settings"
+        android:title="@string/qs_footer_settings_title"
+        android:summary="@string/qs_footer_settings_summary"
+        android:defaultValue="true"
+        settings:allowDividerAbove="true"/>
+
+    <com.ion.ionizer.preferences.SystemSettingSwitchPreference
+        android:key="qs_footer_show_services"
+        android:title="@string/qs_footer_services_title"
+        android:summary="@string/qs_footer_services_summary"
+        android:defaultValue="false" />
 
 </PreferenceScreen>
