--- a/res/xml/ion_settings_statusbar.xml
+++ b/res/xml/ion_settings_statusbar.xml
@@ -16,26 +16,39 @@
 <PreferenceScreen
     xmlns:android="http://schemas.android.com/apk/res/android"
     android:title="@string/statusbar_title"
-    xmlns:settings="http://schemas.android.com/apk/res/com.android.settings">
+    xmlns:settings="http://schemas.android.com/apk/res/com.android.settings"
+    settings:initialExpandedChildrenCount="6" >
 
-     <Preference
-            android:title="@string/statusbar_items_title" >
-            <intent android:action="android.intent.action.MAIN"
-                android:targetPackage="com.android.systemui"
-                android:targetClass="com.android.systemui.tuner.StatusbarItemsActivity" />
-     </Preference>
+    <Preference
+        android:key="status_bar_clock_settings"
+        android:fragment="com.ion.ionizer.fragments.StatusbarClockSettings" 
+        android:title="@string/status_bar_clock_title"
+        android:summary="@string/status_bar_clock_summary" />
 
-        <Preference
-            android:key="battery_settings"
-            android:title="@string/battery_style_category_title"
-            android:summary="@string/battery_style_category_summary"
-            android:fragment="com.ion.ionizer.fragments.StatusBarBattery" />
+    <ListPreference
+        android:key="status_bar_battery_style"
+        android:dialogTitle="@string/status_bar_battery_style_title"
+        android:title="@string/status_bar_battery_style_title"
+        android:entries="@array/entries_status_bar_battery"
+        android:entryValues="@array/values_status_bar_battery" />
 
-        <Preference
-            android:key="status_bar_clock_settings"
-            android:fragment="com.ion.ionizer.fragments.StatusbarClockSettings" 
-            android:title="@string/status_bar_clock_title"
-            android:summary="@string/status_bar_clock_summary" />
+    <ListPreference
+        android:key="status_bar_show_battery_percent"
+        android:title="@string/status_bar_battery_percentage_title"
+        android:dialogTitle="@string/status_bar_battery_percentage_title"
+        android:entries="@array/status_bar_battery_percentage_entries"
+        android:entryValues="@array/status_bar_battery_percentage_values" />
+
+    <Preference
+        android:key="carrierlabel_settings"
+        android:title="@string/carrier_label_category_title"
+        android:summary="@string/carrier_label_category_summary"
+        android:fragment="com.ion.ionizer.fragments.CarrierLabelSettings" />
+
+
+    <PreferenceCategory 
+        android:key="traffic_category" 
+        android:title="@string/trafficat">
 
         <ListPreference
             android:key="network_traffic_location"
@@ -65,43 +78,36 @@
             android:summary="@string/network_traffic_hidearrow_summary"
             android:defaultValue="true" />
 
-        <Preference
-            android:key="carrierlabel_settings"
-            android:title="@string/carrier_label_category_title"
-            android:summary="@string/carrier_label_category_summary"
-            android:fragment="com.ion.ionizer.fragments.CarrierLabelSettings" />
+    </PreferenceCategory>
 
-        <ListPreference
-            android:key="status_bar_battery_style"
-            android:dialogTitle="@string/status_bar_battery_style_title"
-            android:title="@string/status_bar_battery_style_title"
-            android:entries="@array/entries_status_bar_battery"
-            android:entryValues="@array/values_status_bar_battery" />
+    <Preference
+        android:title="@string/statusbar_items_title"
+        settings:allowDividerAbove="true" >
+        <intent android:action="android.intent.action.MAIN"
+            android:targetPackage="com.android.systemui"
+            android:targetClass="com.android.systemui.tuner.StatusbarItemsActivity" />
+    </Preference>
 
-        <ListPreference
-            android:key="status_bar_show_battery_percent"
-            android:title="@string/status_bar_battery_percentage_title"
-            android:dialogTitle="@string/status_bar_battery_percentage_title"
-            android:entries="@array/status_bar_battery_percentage_entries"
-            android:entryValues="@array/status_bar_battery_percentage_values" />
+    <ListPreference
+        android:key="quick_pulldown"
+        android:title="@string/quick_pulldown_title"
+        android:entries="@array/quick_pulldown_entries"
+        android:entryValues="@array/quick_pulldown_values"
+        android:persistent="false"
+        settings:allowDividerAbove="true"/>
 
-        <com.ion.ionizer.preferences.SystemSettingSwitchPreference
-            android:key="volte_icon"
-            android:title="@string/volte_icon_title"
-            android:summary="@string/volte_icon_summary"
-            android:defaultValue="true"/>
+    <ListPreference
+        android:key="smart_pulldown"
+        android:title="@string/smart_pulldown_title"
+        android:entries="@array/smart_pulldown_entries"
+        android:entryValues="@array/smart_pulldown_values"
+        android:persistent="false" />
 
-        <ListPreference
-            android:key="quick_pulldown"
-            android:title="@string/quick_pulldown_title"
-            android:entries="@array/quick_pulldown_entries"
-            android:entryValues="@array/quick_pulldown_values"
-            android:persistent="false" />
+    <com.ion.ionizer.preferences.SystemSettingSwitchPreference
+        android:key="volte_icon"
+        android:title="@string/volte_icon_title"
+        android:summary="@string/volte_icon_summary"
+        android:defaultValue="true"
+        settings:allowDividerAbove="true"/>
 
-        <ListPreference
-            android:key="smart_pulldown"
-            android:title="@string/smart_pulldown_title"
-            android:entries="@array/smart_pulldown_entries"
-            android:entryValues="@array/smart_pulldown_values"
-            android:persistent="false" />
 </PreferenceScreen>
