--- a/res/xml/ion_settings.xml
+++ b/res/xml/ion_settings.xml
@@ -24,7 +24,8 @@
             android:key=""
             android:title="@string/about_ion"
             android:fragment="" 
-            android:icon="@drawable/ic_settings_about"/>
+            android:icon="@drawable/ic_settings_about"
+            android:selectable="false"/>
 
         <!-- Interface -->
         <Preference
