--- a/res/values/ion_strings.xml
+++ b/res/values/ion_strings.xml
@@ -34,6 +34,7 @@
     <string name="system_title">System</string>
     <string name="weather_title">Weather</string>
     <string name="volume_title">Volume Rockers</string>
+    <string name="device_part_title">Device ionizer</string>
 
     <!-- Dashboard conditions--> 
     <string name="dashboard_category">Dashboard options</string> 
