--- a/res/xml/ion_settings.xml
+++ b/res/xml/ion_settings.xml
@@ -116,4 +116,16 @@
             android:fragment="com.ion.ionizer.fragments.Misc"
             android:icon="@drawable/ic_settings_misc"/>
 
+        <!-- Device ionizer -->
+        <Preference
+            android:key="device_part"
+            android:persistent="false"
+            android:title="@string/device_part_title"
+            android:icon="@drawable/ic_settings_misc"
+            settings:allowDividerAbove="true" >
+            <intent android:action="android.intent.action.MAIN"
+                android:targetPackage="com.ion.ionizer.device"
+                android:targetClass="com.ion.ionizer.device.DeviceSettings" />
+        </Preference>
+
 </PreferenceScreen>
