--- a/res/xml/ion_settings_display.xml
+++ b/res/xml/ion_settings_display.xml
@@ -18,6 +18,28 @@
     android:title="@string/display_title"
     xmlns:settings="http://schemas.android.com/apk/res/com.android.settings">
 
+    <PreferenceCategory 
+        android:title="@string/corners_category" > 
+
+	    <com.ion.ionizer.preferences.SystemSettingSeekBarPreference
+            android:key="sysui_rounded_size"
+            android:title="@string/corner_radius"
+            android:max="80"
+            android:min="0"
+            settings:units=""
+            android:defaultValue="0"
+            android:persistent="false" />
+
+        <com.ion.ionizer.preferences.SystemSettingSeekBarPreference
+            android:key="sysui_rounded_content_padding"
+            android:title="@string/content_padding"
+            android:max="20"
+            android:min="0"
+            settings:units=""
+            android:defaultValue="0"
+            android:persistent="false" />
+    </PreferenceCategory>
+
     <PreferenceCategory
             android:title="@string/screen_stabilization_title"
             android:key="screen_stabilization">
