Allow to doubletap or longpress power to toggle flashlight [3/3]
Change-Id: I2149b1fcbd4c06995ea123eccad634042f15424e

--- a/res/values/ion_strings.xml
+++ b/res/values/ion_strings.xml
@@ -587,4 +587,10 @@
     <string name="qs_edit_title">Edit icon</string>
     <string name="qs_edit_summary">Display the tile edit icon in quick settings footer</string>
 
+    <!-- Torch Power button gestures -->
+    <string name="power_button_torch_gesture_title">Screen off torch</string>
+    <string name="power_button_torch_gesture_none">Disabled</string>
+    <string name="power_button_torch_gesture_dt">Double tap power button</string>
+    <string name="power_button_torch_gesture_lp">Long press power button</string>
+
 </resources>
