--- a/res/values/ion_strings.xml
+++ b/res/values/ion_strings.xml
@@ -357,17 +357,18 @@
     <string name="status_bar_battery_style_hidden">Hidden</string>
 
     <!-- Statusbar net monitor -->
-    <string name="network_traffic_state_title">Network traffic location</string>
-    <string name="network_traffic_autohide_threshold_title">Network activity autohide threshold</string>
-    <string name="network_traffic_hidearrow">Network activity arrows</string>
+    <string name="network_traffic_state_title">Location</string>
+    <string name="network_traffic_autohide_threshold_title">Auto-hide threshold</string>
+    <string name="network_traffic_hidearrow">Activity arrows</string>
     <string name="network_traffic_hidearrow_summary">Show the network traffic indicator arrows</string>
-    <string name="network_traffic_type">Network activity type</string>
+    <string name="network_traffic_type">Activity type</string>
     <string name="show_network_traffic_up">Upload</string>
     <string name="show_network_traffic_down">Download</string>
     <string name="show_network_traffic_all">Both</string>
     <string name="traffic_disabled">Disabled</string>
     <string name="traffic_statusbar">Statusbar</string>
     <string name="traffic_expanded_statusbar">Expanded Statusbar</string>
+    <string name="network_traffic_refresh_interval_title">Refresh interval</string>
 
     <!-- Quick Settings brightness slider -->
     <string name="qs_brightness_position_bottom_title">Brightness slider on bottom</string>
