--- a/res/xml/ion_settings_statusbar.xml
+++ b/res/xml/ion_settings_statusbar.xml
@@ -72,6 +72,14 @@
             android:min="0"
             android:defaultValue="1" />
 
+        <com.ion.ionizer.preferences.CustomSeekBarPreference
+            android:key="network_traffic_refresh_interval"
+            android:title="@string/network_traffic_refresh_interval_title"
+            android:max="10"
+            android:min="1"
+            android:defaultValue="2"
+            settings:units="sec" />
+
         <com.ion.ionizer.preferences.SystemSettingSwitchPreference
             android:key="network_traffic_hidearrow"
             android:title="@string/network_traffic_hidearrow"
