--- a/res/values/ion_strings.xml
+++ b/res/values/ion_strings.xml
@@ -592,5 +592,10 @@
     <string name="power_button_torch_gesture_none">Disabled</string>
     <string name="power_button_torch_gesture_dt">Double tap power button</string>
     <string name="power_button_torch_gesture_lp">Long press power button</string>
+    <string name="power_button">Power Button</string>
+
+    <!-- Double-tap-to sleep -->
+    <string name="double_tap_sleep_gesture_title">Double tap to sleep</string>
+    <string name="double_tap_sleep_gesture_summary">Double tap on the status bar to put the device to sleep</string>
 
 </resources>
