--- a/res/xml/ion_settings_statusbar.xml
+++ b/res/xml/ion_settings_statusbar.xml
@@ -45,6 +45,11 @@
         android:summary="@string/carrier_label_category_summary"
         android:fragment="com.ion.ionizer.fragments.CarrierLabelSettings" />
 
+    <com.ion.ionizer.preferences.SystemSettingSwitchPreference
+        android:key="double_tap_sleep_gesture"
+        android:title="@string/double_tap_sleep_gesture_title"
+        android:summary="@string/double_tap_sleep_gesture_summary"
+        android:defaultValue="false" />
 
     <PreferenceCategory 
         android:key="traffic_category" 
