--- a/res/values/ion_arrays.xml
+++ b/res/values/ion_arrays.xml
@@ -555,6 +555,7 @@
 
     <!-- Switch styles -->
     <string-array name="switch_style_entries" translatable="false">
+        <item>@string/switch_ion</item>
         <item>@string/switch_default</item>
         <item>@string/switch_md2</item>
         <item>@string/switch_oneplus</item>
@@ -563,6 +564,7 @@
         <item>0</item>
         <item>1</item>
         <item>2</item>
+        <item>3</item>
     </string-array>
 
 </resources>
