--- a/res/xml/ion_settings_lockscreen.xml
+++ b/res/xml/ion_settings_lockscreen.xml
@@ -69,6 +69,14 @@
             android:summary="@string/media_art_summary"
             android:defaultValue="true" />
 
+        <com.ion.ionizer.preferences.SystemSettingListPreference
+            android:key="lockscreen_album_art_filter"
+            android:title="@string/lockscreen_cover_filter_title"
+            android:entries="@array/lockscreen_cover_filter_entries"
+            android:entryValues="@array/lockscreen_cover_filter_values"
+            android:dependency="lockscreen_media_metadata"
+            android:defaultValue="0" />
+
         <com.ion.ionizer.preferences.SystemSettingSwitchPreference
             android:key="double_tap_sleep_lockscreen"
             android:title="@string/double_tap_sleep_lockscreen_title"
