--- a/res/xml/ion_settings_system.xml
+++ b/res/xml/ion_settings_system.xml
@@ -29,6 +29,12 @@
             android:summary="@string/sensor_block_summary"
             android:defaultValue="false" />
 
+        <Preference
+            android:key="aggressive_battery"
+            android:title="@string/aggressive_battery_title"
+            android:summary="@string/aggressive_battery_summary"
+            android:fragment="com.ion.ionizer.fragments.AggressiveBattery" />
+
 	<Preference
         android:key="privacy_guard_manager"
         android:fragment="com.android.settings.privacyguard.PrivacyGuardManager"
