--- a/res/values/ion_strings.xml
+++ b/res/values/ion_strings.xml
@@ -613,6 +613,8 @@
     <string name="lockscreen_cover_filter_title">Media cover art filter</string>
     <string name="lockscreen_cover_filter_none">None</string>
     <string name="lockscreen_cover_filter_grayscale">Grayscale</string>
+    <string name="lockscreen_cover_filter_tint">Accent tinted</string>
     <string name="lockscreen_cover_filter_blur">Blur</string>
+    <string name="lockscreen_cover_filter_grayblur">Grayscale and blurred</string>
 
 </resources>
