--- a/res/values/ion_strings.xml
+++ b/res/values/ion_strings.xml
@@ -647,6 +647,7 @@
     <string name="lockscreen_clock_selection_spidey">Analog (Spidey)</string>
     <string name="lockscreen_clock_selection_dot">Analog (Dot)</string>
     <string name="lockscreen_clock_selection_spectrum">Analog (Spectrum)</string>
-    <string name="lockscreen_clock_selection_sneeky">Analog (Sneeky)</string>
+    <string name="lockscreen_clock_selection_sneeky">Analog (Sneeky)</string>4
+    <string name="lockscreen_clock_selection_text">Text (Android Q)</string>
 
 </resources>
