--- a/res/values/ion_strings.xml
+++ b/res/values/ion_strings.xml
@@ -96,7 +96,7 @@
     <string name="locktra">Extras</string>
     <string name="device_part_title">Device ionizer</string>
     <string name="corners_category">Corners</string>
-    <string name="lockcsize">Font Size</string>
+    <string name="lockcsize">Clock &amp; Date </string>
 
     <!-- Dashboard conditions--> 
     <string name="dashboard_category">Dashboard options</string> 
