Add customisable alignment for Q style clock [2/2]

--- a/res/values/ion_strings.xml
+++ b/res/values/ion_strings.xml
@@ -881,4 +881,10 @@
     <!-- QuickSettings Panel Transparency -->
     <string name="qs_panel_alpha_title">QS panel transparency</string>
 
+    <!-- Lockscreen text clock align -->
+    <string name="lockscreen_clock_align_title">Q Clock Alignment</string>
+    <string name="lockscreen_clock_align0">Left</string>
+    <string name="lockscreen_clock_align1">Center</string>
+    <string name="lockscreen_clock_align2">Right</string>
+
 </resources>
