--- a/res/values/ion_arrays.xml
+++ b/res/values/ion_arrays.xml
@@ -880,4 +880,17 @@
         <item>63</item>
     </string-array>
 
+    <!-- CustomTextClock Alignment -->
+    <string-array name="lockscreen_clock_align_entries" translatable="false">
+        <item>@string/lockscreen_clock_align0</item>
+        <item>@string/lockscreen_clock_align1</item>
+        <item>@string/lockscreen_clock_align2</item>
+    </string-array>
+
+    <string-array name="lockscreen_clock_align_values" translatable="false">
+        <item>0</item>
+        <item>1</item>
+        <item>2</item>
+    </string-array>
+
 </resources>
