--- a/res/xml/rounded_corners.xml
+++ b/res/xml/rounded_corners.xml
@@ -19,6 +19,12 @@
     android:title="@string/corners_title"
     xmlns:settings="http://schemas.android.com/apk/res/com.android.settings">
 
+    <Preference
+        android:key="display_cutout_force_fullscreen_settings"
+        android:title="@string/display_cutout_force_fullscreen_title"
+        android:summary="@string/display_cutout_force_fullscreen_summary"
+        android:fragment="com.ion.ionizer.fragments.DisplayCutoutForceFullscreenSettings" />
+
     <com.ion.ionizer.preferences.SecureSettingSwitchPreference
        android:key="sysui_rounded_fwvals"
        android:title="@string/corner_fwvals"
