--- a/res/values/ion_strings.xml
+++ b/res/values/ion_strings.xml
@@ -666,4 +666,9 @@
     <string name="aggressive_battery_saver_title">Auto-enable on battery saver </string>
     <string name="aggressive_battery_saver_summary">Enable Aggressive Battery automatically when using battery saver</string>
 
+    <!-- Volume control playback -->
+    <string name="volbtn_music_controls_title">Control playback</string>
+    <string name="volbtn_music_controls_summary">Seek music tracks by long pressing the volume keys while the display is off</string>
+    <string name="button_wake_title">Wake device</string>
+
 </resources>
