--- a/res/xml/ion_settings_volume.xml
+++ b/res/xml/ion_settings_volume.xml
@@ -41,6 +41,19 @@
             android:summary="@string/swap_volume_buttons_summary"
             android:defaultValue="false" />
 
+        <com.ion.ionizer.preferences.SystemSettingSwitchPreference
+            android:key="volume_wake_screen"
+            android:title="@string/button_wake_title"
+            android:defaultValue="false"
+            android:disableDependentsState="true" />
+
+        <com.ion.ionizer.preferences.SystemSettingSwitchPreference
+            android:key="volbtn_music_controls"
+            android:title="@string/volbtn_music_controls_title"
+            android:summary="@string/volbtn_music_controls_summary"
+            android:dependency="volume_wake_screen"
+            android:defaultValue="false" />
+
     </PreferenceCategory>
 
     <PreferenceCategory
